<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_op"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="0"
                android:text="@string/mult"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/txt_operacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="h"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resul"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/txt_resultado"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/b_comprobar"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:onClick="verificar"
                    android:text="@string/resultado" />

                <Button
                    android:id="@+id/b_acercade"
                    android:layout_width="217dp"
                    android:layout_height="wrap_content"
                    android:onClick="about"
                    android:text="@string/about" />
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
